# rust-magic

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README-crate.md  README.md  REUSE.toml  SECURITY.md  clippy.toml  deny.toml  external-types.toml  magic.rc  magic.rs  pkg.rs  release-plz.toml  rust-toolchain  rust-toolchain.toml
.github/: dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  custom-issue.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  conventional-commits.yml  deny.yml  docs.yml  external-types.yml  lint.yml  linux.yml  minver.yml  msrv.yml  release.yml  reuse.yml  scorecards.yml  zizmor.yml
.reuse/: dep5
data/tests/: db-images-png  db-images-png-precompiled.mgc  db-python
examples/: file-ish.rs
magic-sys/: Cargo.toml  build.rs
magic-sys/src/: lib.rs
src/: ffi.rs  lib.rs  magic.rs
