[package]
name = "magic"
description = "High level bindings for the `libmagic` C library"
license = "MIT"
keywords = [
    "magic",
    "file",
    "ffi",
    "bindings",
]
categories = [
	"api-bindings",
	"filesystem",
	"parsing",
]
repository = "https://github.com/robo9k/rust-magic.git"
authors = [
	"Daniel Micay <danielmicay@gmail.com>",
	"Petar Radošević <petar@wunki.org>",
	"lilydjwg <lilydjwg@gmail.com>",
	"Jeff Belgum <belgum@bastille.io>",
	"Onur Aslan <onur@onur.im>",
	"robo9k <robo9k@symlink.io>",
]
version = "0.13.0"
exclude = [
	".gitignore",
	"/.github/",
	"rust-toolchain.toml",
	"deny.toml",
	"data/tests/",
	".bumpversion.cfg",
	"clippy.toml",
	"LICENSES/",
	".reuse/",
]
edition = "2018"
rust-version = "1.48"

[package.metadata]
msrv = "1.48.0"

[package.metadata.docs.rs]
all-features = true
targets = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "1.3.2"
magic-sys = "0.3.0"
thiserror = "1.0.30"
errno = "0.2.8"

[dependencies.libc]
version = "0.2.105"
default-features = false

[dev-dependencies]
regex = "1.5.4"
static_assertions = "1.1.0"
