[package]
name = "magic"
description = "High level bindings for the `libmagic` C library"
readme = "README-crate.md"
license = "MIT OR Apache-2.0"
keywords = [
    "magic",
    "file",
    "ffi",
    "bindings",
]
categories = [
	"api-bindings",
	"filesystem",
	"parsing",
]
repository = "https://github.com/robo9k/rust-magic.git"
authors = [
	"Daniel Micay <danielmicay@gmail.com>",
	"Petar Radošević <petar@wunki.org>",
	"lilydjwg <lilydjwg@gmail.com>",
	"Jeff Belgum <belgum@bastille.io>",
	"Onur Aslan <onur@onur.im>",
	"robo9k <robo9k@symlink.io>",
]
version = "0.16.2"
include = [
	"/src/",
]
edition = "2018"
rust-version = "1.56"

[package.metadata]
msrv = "1.56.0"

[package.metadata.docs.rs]
all-features = true
targets = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "2.4.1"
magic-sys = "0.3.0"
thiserror = "1.0.56"

[dependencies.libc]
version = "0.2.152"
default-features = false

[dev-dependencies]
static_assertions = "1.1.0"
