[package]
name = "magic"
description = "High level bindings for the `libmagic` C library"
readme = "README-crate.md"
license = "MIT OR Apache-2.0"
keywords = [
    "magic",
    "file",
    "ffi",
    "bindings",
]
categories = [
	"api-bindings",
	"filesystem",
	"parsing",
]
repository = "https://github.com/robo9k/rust-magic.git"
authors = [
	"Daniel Micay <danielmicay@gmail.com>",
	"Petar Radošević <petar@wunki.org>",
	"lilydjwg <lilydjwg@gmail.com>",
	"Jeff Belgum <belgum@bastille.io>",
	"Onur Aslan <onur@onur.im>",
	"robo9k <robo9k@symlink.io>",
]
version = "0.16.5"
include = [
	"/src/",
]
edition = "2018"
rust-version = "1.64"

[package.metadata]
msrv = "1.64.0"

[package.metadata.docs.rs]
all-features = true
targets = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "2.5.0"
magic-sys = "0.3.0"
